--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.flipkart.typescript</groupId>
-    <artifactId>typescript</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>typescriptpoet</artifactId>
+    <version>1.0.0</version>
     <build>
         <plugins>
             <plugin>
