--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 sudo: false
 language: java
+jdk:
+  - oraclejdk8
+  - oraclejdk10
 services:
 - docker
 cache:
   directories:
   - "$HOME/.cache"
+script:
+  - mvn clean test
