--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.flipkart.typescript</groupId>
     <artifactId>typescriptpoet</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
